# rules_rust

bindgen/: BUILD.bazel  repositories.bzl
